tweak when scrollbar appears in main viewport - adjusted padding between components (must be in JS because of flex) - added helvetica bold to glyphs - fixed roboto mono medium glyphs (need to be centered) - fixed positional axis bug - cache didn't account for fontsize

--- a/src/components/AlignmentViewer.scss
+++ b/src/components/AlignmentViewer.scss
@@ -26,10 +26,10 @@
 
   .av-widget {
     display: flex;
-    margin: 2px 4px;
+    //margin: 2px 4px;
 
     .av-annotation,
-    .av-content {
+    .av-content-holder {
       display: flex;
       position: relative;
     }
@@ -44,11 +44,19 @@
       font-size: 14px; //default, but this is set as a style
     }
 
-    .av-content {
+    .av-content-holder {
       flex: 1 0 85%; //annotations take up 15%
       position: relative;
       align-items: center;
       overflow: hidden;
+
+      .av-content {
+        position: absolute;
+        top: 0;
+        bottom: 0;
+        left: 0;
+        right: 0;
+      }
     }
   }
 }
